@@ -51,43 +51,15 @@ public abstract class BaseEndpointCoprocessor implements Coprocessor,
   }
 
   @Override
-  public long getProtocolVersion(String arg0, long arg1) throws IOException {
+  public void start(CoprocessorEnvironment env) {
+    this.env = env;
+  }
+
+  @Override
+  public void stop(CoprocessorEnvironment env) { }
+
+  @Override
+  public long getProtocolVersion(String protocol, long clientVersion) throws IOException {
     return HBaseRPCProtocolVersion.versionID;
   }
-
-  @Override
-  public void preOpen(CoprocessorEnvironment e) { }
-
-  /**
-   * It initializes the coprocessor resources. If you need to override this
-   * method, please remember to call super(e).
-   */
-  @Override
-  public void postOpen(CoprocessorEnvironment e) {
-    setEnvironment(e);
-  }
-
-  @Override
-  public void preClose(CoprocessorEnvironment e, boolean abortRequested) { }
-
-  @Override
-  public void postClose(CoprocessorEnvironment e, boolean abortRequested) { }
-
-  @Override
-  public void preFlush(CoprocessorEnvironment e) { }
-
-  @Override
-  public void postFlush(CoprocessorEnvironment e) { }
-
-  @Override
-  public void preCompact(CoprocessorEnvironment e, boolean willSplit) { }
-
-  @Override
-  public void postCompact(CoprocessorEnvironment e, boolean willSplit) { }
-
-  @Override
-  public void preSplit(CoprocessorEnvironment e) { }
-
-  @Override
-  public void postSplit(CoprocessorEnvironment e, HRegion l, HRegion r) { }
 }
